--- a/Poc/Poc.vcxproj
+++ b/Poc/Poc.vcxproj
@@ -216,6 +216,9 @@
     <ClInclude Include="utils.h" />
     <ClInclude Include="write.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
