--- a/Poc/Poc.vcxproj.filters
+++ b/Poc/Poc.vcxproj.filters
@@ -114,4 +114,9 @@
       <Filter>Header Files\secure</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
