--- a/Poc/Poc.vcxproj.filters
+++ b/Poc/Poc.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClInclude Include="ldrreloc.h">
       <Filter>Header Files\secure</Filter>
     </ClInclude>
+    <ClInclude Include="allowed_extension.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md">
