--- a/Poc/Poc.vcxproj.filters
+++ b/Poc/Poc.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClInclude Include="allowed_extension.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="secure_process.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md">
