--- a/Poc/Poc.vcxproj
+++ b/Poc/Poc.vcxproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommPort.c" />
+    <ClCompile Include="Config.c" />
     <ClCompile Include="Context.c" />
     <ClCompile Include="Cipher.c" />
     <ClCompile Include="FileFuncs.c" />
@@ -58,6 +59,7 @@
     <Configuration>Debug</Configuration>
     <Platform Condition="'$(Platform)' == ''">Win32</Platform>
     <RootNamespace>Poc</RootNamespace>
+    <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,6 +141,7 @@
     <IncludePath>D:\Windows Kits\10\Cryptographic Provider Development Kit\Include;$(IncludePath)</IncludePath>
     <LibraryPath>D:\Windows Kits\10\Cryptographic Provider Development Kit\Lib;$(LibraryPath)</LibraryPath>
     <Inf2CatUseLocalTime>true</Inf2CatUseLocalTime>
+    <OutDir>$(SolutionDir)$(Platform)\$(ConfigurationName)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
@@ -210,7 +213,6 @@
     <FilesToPackage Include="$(TargetPath)" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="allowed_extension.h" />
     <ClInclude Include="commport.h" />
     <ClInclude Include="context.h" />
     <ClInclude Include="cipher.h" />
@@ -223,12 +225,11 @@
     <ClInclude Include="processecure.h" />
     <ClInclude Include="process.h" />
     <ClInclude Include="read.h" />
-    <ClInclude Include="secure_process.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="write.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="README.md" />
+    <None Include="..\README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
