--- a/Poc/Poc.vcxproj.filters
+++ b/Poc/Poc.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="Dpc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ManualEncryptDecrypt.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils.h">
@@ -120,6 +123,9 @@
       <Filter>Header Files\secure</Filter>
     </ClInclude>
     <ClInclude Include="dpc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="manualencryptdecrypt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
